# esphome-dev

./: .config  .env  .gitignore  Common.mk  Kconfig  README.md  configure.ac
conf/m4/: ax_prog_python_version.m4
src/: Makefile.am  esp.py
src/config/: RF1.yaml  andrea.yaml  sw_dual_test.yaml
src/config_andrea/: RF1.yaml  ai_think01.yaml  ai_think02.yaml  ai_think03.yaml  ai_think04.yaml  bathroom_1.yaml  citofono.yaml  lavanderia_prese.yaml  orbit_water_valve.yaml  sonoff_4ch_01.yaml  sw_dual_test.yaml  terrazza_ac.yaml  terrazza_prese.yaml  test_playground_esp01.yaml  test_playground_irrigation.yaml
src/rfx_components/pilight_scan/: __init__.py  pilight_scan.h
